<resources>
    <string name="app_name">TAIHelper</string>
    <string name="converter_fragment">Конвертор</string>
    <string name="oxygen_fragment">Кислород</string>
    <string name="ajk_fragment">АЖК</string>
    <string name="reference_fragment">Справка</string>
    <string name="settings">Настройки</string>
    <string name="voltage_0_5_ma">0 - 5 mA</string>
    <string name="_4_20_ma">4 - 20 mA</string>
    <string name="electric_output">Токовый выход</string>
    <string name="result_format"> %.2f</string>
    <string name="error_invalid_input">Ошибка: Некорректный ввод</string>
    <string name="app_logo_description">Логотип приложения</string>
    <string name="welcome_text">Добро пожаловать</string>
    <string name="login_subtitle">Войдите в аккаунт для продолжения</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="login_button">Войти</string>
    <string name="or_text">или</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="register_button">Регистрация</string>
    <string name="offline_mode">Режим офлайн. Данные будут синхронизированы позже.</string>
    <string name="data_saved_offline">Данные сохранены локально и будут отправлены при подключении к сети.</string>
    <string name="syncing_data">Синхронизация данных...</string>
    <string name="sync_complete">Синхронизация завершена</string>
    <string name="sync_failed">Ошибка синхронизации</string>
    <string name="retry">Повторить</string>
    <string name="no_sensors">Нет датчиков</string>
    <string name="add_sensor">Добавить датчик</string>
    <string name="register_title">Регистрация</string>
    <string name="register_subtitle">Создайте новую учетную запись</string>
    <string name="name_hint">Имя</string>
    <string name="last_name_hint">Фамилия</string>
    <string name="position_hint">Должность</string>
    <string name="confirm_password_hint">Повторите пароль</string>
    <string name="back_button">Назад</string>
    <string name="reset_password_title">Восстановление пароля</string>
    <string name="reset_password_subtitle">Введите адрес электронной почты, связанный с вашей учетной записью, и мы отправим вам инструкции по сбросу пароля.</string>
    <string name="reset_password_icon_description">Иконка сброса пароля</string>
    <string name="reset_password_button">Сбросить пароль</string>
    <string name="discription_app">Это мобильное приложение разработано для упрощения управления повседневными задачами. Оно предлагает удобный и интуитивно понятный интерфейс, который поможет вам повысить продуктивность. Среди основных возможностей приложения: конвертация измерний, сохранение измерений, синхронизация с облачным хранилищем для доступа с разных устройств.</string>
    <string name="about_app_tittle">О приложении</string>
    <string name="version">Версия 1.8.0</string>
    <string name="Developer">Виталий Гизатулин</string>
    <string name="developer_tittle">разработчик</string>
    <string name="email">my@vgmail.ru</string>
    <string name="about_developer">Привет! Я начинающий разработчик мобильных приложений в области Android-разработки. Это мой дипломный проект. Я стремлюсь создавать приложения, которые решают реальные проблемы пользователей и делают их жизнь проще и удобнее.</string>
    <string name="logo">Logo</string>
    <string name="tai_helper">TAI-Helper</string>
    <string name="about_author_tittle">Об авторе</string>
    <string name="offline">Офлайн</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_status">Статус пользователя</string>
    <string name="new_measurens">Новые измерения</string>
    <string name="add_new_sensor">Добавление нового датчика</string>
    <string name="icon_sensor">Иконка датчика</string>
    <string name="type_sensor">Тип датчика *</string>
    <string name="position_sensor">Позиция (например K-601)</string>
    <string name="input_scaale">Выходной диапазон</string>
    <string name="middle_scale">Средняя точка</string>
    <string name="modification">Модификация</string>
    <string name="block">Блок</string>
    <string name="start_scale_meash">Начало шкалы измерения</string>
    <string name="end_scale_meash">Окончание шкалы измерения</string>
    <string name="must_field">* Обязательные поля</string>
    <string name="save">Сохранить</string>
    <string name="step_1_4">Шаг 1/4</string>
    <string name="colibration">Калибровка датчиков</string>
    <string name="_0_percent">0%</string>
    <string name="enter_measurements_sensor">Ввод значений датчиков</string>
    <string name="enter_labs">Лабораторный датчик</string>
    <string name="input_1">Значение 1</string>
    <string name="input_2">Значение 2</string>
    <string name="input_3">Значение 3</string>
    <string name="middle_scale_ajk">Среднее значение</string>
    <string name="zero_0_0000">0.0000</string>
    <string name="check_sensor">Поверяемый датчик</string>
    <string name="resistance_and_const">Сопротивление и константа</string>
    <string name="resistance">Значение сопротивления</string>
    <string name="math_const">Рассчитанная константа</string>
    <string name="math_number">Константа = Сопротивление × Среднее значение (лаб.)</string>
    <string name="middle_0_0000">Среднее (лаб.): 0.0000</string>
    <string name="table_number">Таблица значений</string>
    <string name="r_k_0_2">R = K/0.2 = -</string>
    <string name="i_electro">I (ток)</string>
    <string name="display">Показания</string>
    <string name="r_k_0_5">R = K/0.5 = -</string>
    <string name="r_k_0_8">R = K/0.8 = -</string>
    <string name="resistance_t_40_c">Сопротивление при t=40°C</string>
    <string name="r_k_0_68">R = K/0.68 = -</string>
    <string name="display_sensor">Показания датчика</string>
    <string name="total_result">Итоговые результаты</string>
    <string name="start_new_colibration">Начать новую калибровку</string>
    <string name="reset">Сбросить</string>
    <string name="next">Далее</string>
    <string name="settings_app">Настройки приложения</string>
    <string name="themes">Оформление</string>
    <string name="light_themes">Светлая тема</string>
    <string name="dark_themes">Темная тема</string>
    <string name="system_themes">Системная тема</string>
    <string name="chose_your_themes">Выберите предпочитаемую тему оформления приложения или используйте системные настройки вашего устройства.</string>
    <string name="language">Язык</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>
    <string name="alban">Албанский</string>
    <string name="chose_your_language">Выберите предпочитаемый язык интерфейса приложения.</string>
    <string name="_0_5_nma">0 - 5\nmA</string>
    <string name="start_scale_sensor">Начало шкалы датчика</string>
    <string name="_4_20_nma">4 - 20\nmA</string>
    <string name="end_scale_sensor">Конец шкалы датчика</string>
    <string name="users_data">Пользовательские данные</string>
    <string name="enter_user_scale">Введите значение измерений</string>
    <string name="what_do_find">Что необходимо найти</string>
    <string name="electrics">Токовые</string>
    <string name="sensor">Датчик</string>
    <string name="mathematical">Рассчитать</string>
    <string name="number_block">№ блока</string>
    <string name="add_position">Позиция</string>
    <string name="info_about_sensors">Информация о датчике</string>
    <string name="position_sensor_simple">Позиция датчика:</string>
    <string name="number">Номер:</string>
    <string name="middle_scale_simple">Средняя точка:</string>
    <string name="electric_output_simple">Токовые выходы:</string>
    <string name="fourth_sensor">Четвертый датчик</string>
    <string name="second_sensor">Второй датчик</string>
    <string name="third_sensor">Третий датчик</string>
    <string name="first_sensor">Первый датчик</string>
    <string name="latest_5_meashuremets">Последние 5 измерений</string>
    <string name="see_pdf">Предпросмотр PDF</string>
    <string name="downloaded">Загружено</string>
    <string name="Date">Дата:</string>
    <string name="date_23_02_2025">23.02.2025</string>
    <string name="panel">Значение на щите:</string>
    <string name="_3_57">3.57</string>
    <string name="measur">Измеренное:</string>
    <string name="oxygen_check">Проверка кислорода</string>
    <string name="chose_block">Выберите блок:</string>
    <string name="_1">1</string>
    <string name="_23_02_2025">23.02.2025</string>
    <string name="change">Изменить</string>
    <string name="downloaded_file_0">Загрузка файла: 0%</string>
    <string name="wrong_download_pdf">Не удалось загрузить PDF файл</string>
    <string name="back_page">Предыдущая страница</string>
    <string name="page_between_1_10">Страница 1 из 10</string>
    <string name="next_page">Следующая страница</string>
    <string name="category">Категории:</string>
    <string name="not_found_doc">Нет доступных документов</string>
    <string name="_9k_603">9K-603</string>
    <string name="panels">Щит</string>
    <string name="testo">Testo</string>
    <string name="correct_middle_point">Корректировка средней точки</string>
    <string name="_9k_606">9K-606</string>
    <string name="_3_55">3.55</string>
    <string name="delete_from_memort">Удалить из памяти</string>
    <string name="categoryes">Категория</string>
    <string name="date_start">Дата С: —</string>
    <string name="date_end">Дата ПО: —</string>
    <string name="create_number">Заводской номер</string>
    <string name="position_sensorio">Позиция датчика</string>
    <string name="show_calobrations">Показать калибровки</string>
</resources>