<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/converterFragment"
        android:name="com.reftgres.taihelper.ui.converter.FragmentConverter"
        android:label="@string/converter_fragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/oxygenMeasurementFragment"
        android:name="com.reftgres.taihelper.ui.oxygen.OxygenMeasurementFragment"
        android:label="@string/oxygen_fragment"
        tools:layout="@layout/fragment_converter" />

    <fragment
        android:id="@+id/authFragment"
        android:name="com.reftgres.taihelper.ui.authorization.AuthFragment"
        android:label="AuthFragment">
        <action
            android:id="@+id/action_authFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_authFragment_to_resetPasswordFragment"
            app:destination="@id/resetPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.reftgres.taihelper.ui.registration.RegisterFragment"
        android:label="RegisterFragment">
        <action
            android:id="@+id/action_registerFragment_to_authFragment"
            app:destination="@id/authFragment" />
    </fragment>

    <fragment
        android:id="@+id/resetPasswordFragment"
        android:name="com.reftgres.taihelper.ui.reset.ResetPasswordFragment"
        android:label="ResetPasswordFragment" />

    <fragment
        android:id="@+id/verificationAjkFragment"
        android:name="com.reftgres.taihelper.ui.verification.VerificationAjkFragment"
        android:label="@string/ajk_fragment"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/referenceFragment"
        android:name="com.reftgres.taihelper.ui.reference.ReferenceFragment"
        android:label="@string/reference_fragment" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.reftgres."
        android:label="@string/settings"/>

</navigation>