<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reference.PdfViewerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPdf"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Просмотр документа" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDeletePdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Удалить из памяти"
        android:visibility="visible"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarPdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/networkStatusIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:letterSpacing="0.01"
        android:background="@color/warning"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/offline_mode"
        android:textColor="@color/error"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbarPdf"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/pdfContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navigationContainer"
        app:layout_constraintTop_toBottomOf="@id/networkStatusIndicator">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pdfViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progressBarPdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewProgressPdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/downloaded_file_0"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.01"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewErrorPdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/wrong_download_pdf"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.01"
            android:textColor="@color/error"
            android:textSize="16sp"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/navigationContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/buttonPrevPage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_page"
            app:boxBackgroundColor="@color/input_background"
            app:hintTextColor="@color/text_hint"
            app:boxStrokeColor="@color/primary"
            app:endIconTint="@color/primary"
            android:src="@android:drawable/ic_media_previous" />

        <TextView
            android:id="@+id/textViewPageNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/page_between_1_10"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.01"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/buttonNextPage"
            android:layout_width="48dp"
            app:boxBackgroundColor="@color/input_background"
            app:hintTextColor="@color/text_hint"
            app:boxStrokeColor="@color/primary"
            app:endIconTint="@color/primary"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/next_page"
            android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>